# chords

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml
data/: de.chords.Chords.gschema.xml  io.github.bjesus.Chords.gschema.xml
src/: config.rs  main.rs
src/data/: api.rs  cache.rs  models.rs
src/music/: chord_db.rs  mod.rs  parser.rs  transpose.rs
src/ui/: chord_diagrams.rs  controls.rs  mod.rs  preferences.rs  search_results.rs  sidebar.rs  tab_view.rs  window.rs
tests/: api_test.rs  pipeline_test.rs
