[package]
name = "chords"
version = "0.1.0"
edition = "2021"
description = "A GTK4/Libadwaita guitar chords viewer"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
once_cell = "1"
urlencoding = "2"
url = "2"
